Fixed flex wrap

--- a/pub/System/TasksAPIPlugin/src/scss/_tasks.scss
+++ b/pub/System/TasksAPIPlugin/src/scss/_tasks.scss
@@ -115,7 +115,7 @@
     }
 
     > .content {
-      @include flex-container($wrap: nowrap, $justify: space-between);
+      @include flex-container($wrap: wrap, $justify: space-between);
       @include flex($grow: 2, $align: center);
 
       > div {
